@@ -36,6 +36,11 @@ sub report {
 	my @report_full = split m/\n/ms, $report;
 	my @report = ($report_full[0], $report_full[-2], $report_full[-1]);
 	return wantarray ? @report : (join "\n", @report)."\n";
+
+# Get state.
+sub state {
+	my $self = shift;
+	return [@{$self}];
 }
 
 1;
